--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,4 @@
 PORT=3001
-DATABASE_URL=postgres://localhost:5432/your-database-name
-SECRET=insert-your-secret
+DATABASE_URL=postgres://localhost:5432/auth-api
+SECRET = process.env.SECRET
+NODE_ENV=test
